// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > when a non esc key is pressed > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <div class="dropdownMenu above">
      <ul class="menu">Slot content</ul>
    </div>
  </transition-stub>
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > when document is clicked > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > when dropdown height is not less than window height > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <div class="dropdownMenu">
      <ul class="menu">Slot content</ul>
    </div>
  </transition-stub>
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > when dropdownMenuRef is clicked > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <div class="dropdownMenu above">
      <ul class="menu">Slot content</ul>
    </div>
  </transition-stub>
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > when esc key is pressed > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`DropdownMenu > when the IconButton component is clicked > when the IconButton component is clicked again > matches the snapshot 1`] = `
"<div class="dropdown"><button class="iconButton alignRight button button" type="button" title="More">
    <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="text visually-hidden">More</span>
  </button>
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
